WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68366
Fix nonpremultiplied webgl toDataURL to jpeg
https://bugs.webkit.org/show_bug.cgi?id=68366
Summary
Fix nonpremultiplied webgl toDataURL to jpeg
John Bauman
Reported
2011-09-19 09:28:18 PDT
Fix nonpremultiplied webgl toDataURL to jpeg
Attachments
Patch
(11.46 KB, patch)
2011-09-19 09:31 PDT
,
John Bauman
no flags
Details
Formatted Diff
Diff
Patch
(11.29 KB, patch)
2011-09-19 14:06 PDT
,
John Bauman
no flags
Details
Formatted Diff
Diff
Patch
(16.36 KB, patch)
2011-09-21 18:17 PDT
,
John Bauman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
John Bauman
Comment 1
2011-09-19 09:31:56 PDT
Created
attachment 107873
[details]
Patch
Kenneth Russell
Comment 2
2011-09-19 13:36:11 PDT
Comment on
attachment 107873
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=107873&action=review
Looks good overall. Thanks for catching this. Please update the comment when landing. r=me
> LayoutTests/fast/canvas/webgl/premultiplyalpha-test.html:5 > + -->
There shouldn't be any copyright headers in the WebKit layout tests; please remove this one.
John Bauman
Comment 3
2011-09-19 14:06:26 PDT
Created
attachment 107918
[details]
Patch
Kenneth Russell
Comment 4
2011-09-19 14:07:04 PDT
Comment on
attachment 107918
[details]
Patch Looks good.
WebKit Review Bot
Comment 5
2011-09-19 15:22:34 PDT
Comment on
attachment 107918
[details]
Patch Clearing flags on attachment: 107918 Committed
r95482
: <
http://trac.webkit.org/changeset/95482
>
WebKit Review Bot
Comment 6
2011-09-19 15:22:39 PDT
All reviewed patches have been landed. Closing bug.
Kenneth Russell
Comment 7
2011-09-19 17:25:46 PDT
This was rolled out due to breakage of the CG port. Reopening.
noel gordon
Comment 8
2011-09-19 19:36:28 PDT
Any mac-chrome breakage? I believe
bug 40147
affects the CG mac ports.
John Bauman
Comment 9
2011-09-19 19:38:55 PDT
Yeah, mac-chrome was broken. I'm currently working on a fix (which will hopefully fix
bug 40147
as well).
noel gordon
Comment 10
2011-09-19 19:53:04 PDT
Thanks John. For skia, maybe avoid the division by 255 at lines @96-98 with a loop body like ... unsigned char alpha = pixels[3]; if (alpha != 255) { *output++ = SkMulDiv255Round(pixels[0], alpha); *output++ = SkMulDiv255Round(pixels[1], alpha); *output++ = SkMulDiv255Round(pixels[2], alpha); } else { *output++ = pixels[0]; *output++ = pixels[1]; *output++ = pixels[2]; }
John Bauman
Comment 11
2011-09-21 18:17:16 PDT
Created
attachment 108265
[details]
Patch
Kenneth Russell
Comment 12
2011-09-26 10:56:15 PDT
Comment on
attachment 108265
[details]
Patch Looks good to me. Nice work. Please keep an eye on the bots (since it seems the previous failure was only caught by the Chromium canaries) and once this settles down please take
https://bugs.webkit.org/show_bug.cgi?id=40147
and close it as a duplicate of this one.
WebKit Review Bot
Comment 13
2011-09-26 15:06:40 PDT
Comment on
attachment 108265
[details]
Patch Clearing flags on attachment: 108265 Committed
r96000
: <
http://trac.webkit.org/changeset/96000
>
WebKit Review Bot
Comment 14
2011-09-26 15:06:45 PDT
All reviewed patches have been landed. Closing bug.
John Bauman
Comment 15
2011-09-26 15:46:49 PDT
***
Bug 40147
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug